--- a/environment.yml
+++ b/environment.yml
@@ -2,60 +2,95 @@ name: myenv
 channels:
   - defaults
 dependencies:
-  - ca-certificates=2020.7.22=0
-  - certifi=2020.6.20=py36_0
-  - libcxx=10.0.0=1
-  - libedit=3.1.20191231=h1de35cc_1
-  - libffi=3.3=hb1e8313_2
-  - ncurses=6.2=h0a44026_1
-  - openssl=1.1.1h=haf1e3a3_0
-  - pip=20.2.3=py36_0
-  - python=3.6.12=h26836e1_2
-  - readline=8.0=h1de35cc_0
-  - setuptools=50.3.0=py36h0dc7051_1
-  - sqlite=3.33.0=hffcf06c_0
-  - tk=8.6.10=hb0a8c7a_0
-  - wheel=0.35.1=py_0
-  - xz=5.2.5=h1de35cc_0
-  - zlib=1.2.11=h1de35cc_3
+
   - pip:
+    - absl-py==0.10.0
+    - appnope==0.1.0
+    - astunparse==1.6.3
     - async-generator==1.10
-    - attrs==20.2.0
-    - bleach==3.2.1
+    - attrs==20.1.0
+    - backcall==0.2.0
+    - bleach==3.1.5
+    - cachetools==4.1.1
+    - chardet==3.0.4
+    - cycler==0.10.0
     - decorator==4.4.2
     - defusedxml==0.6.0
+    - efficientnet==1.1.0
     - entrypoints==0.3
-    - importlib-metadata==2.0.0
+    - gast==0.3.3
+    - google-auth==1.21.0
+    - google-auth-oauthlib==0.4.1
+    - google-pasta==0.2.0
+    - grpcio==1.31.0
+    - h5py==2.10.0
+    - idna==2.10
+    - imageio==2.9.0
+    - importlib-metadata==1.7.0
+    - ipykernel==5.3.4
+    - ipython==7.16.1
     - ipython-genutils==0.2.0
+    - jedi==0.17.2
     - jinja2==2.11.2
     - jsonschema==3.2.0
     - jupyter-client==6.1.7
     - jupyter-core==4.6.3
-    - jupyter-server==1.0.4
-    - jupyterlab-pygments==0.1.2
+    - jupyter-server==0.1.1
+    - jupyterlab-pygments==0.1.1
+    - keras-applications==1.0.8
+    - keras-preprocessing==1.1.2
+    - kiwisolver==1.2.0
+    - markdown==3.2.2
     - markupsafe==1.1.1
+    - matplotlib==3.3.1
     - mistune==0.8.4
-    - nbclient==0.5.0
-    - nbconvert==6.0.7
+    - nbconvert==5.6.1
     - nbformat==5.0.7
-    - nest-asyncio==1.4.1
-    - numpy==1.19.2
+    - networkx==2.5
+    - numpy==1.18.5
+    - oauthlib==3.1.0
+    - opt-einsum==3.3.0
     - packaging==20.4
     - pandocfilters==1.4.2
+    - parso==0.7.1
+    - pexpect==4.8.0
+    - pickleshare==0.7.5
+    - pillow==7.2.0
     - prometheus-client==0.8.0
+    - prompt-toolkit==3.0.7
+    - protobuf==3.13.0
     - ptyprocess==0.6.0
-    - pygments==2.7.1
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pygments==2.6.1
     - pyparsing==2.4.7
-    - pyrsistent==0.17.3
+    - pyrsistent==0.16.0
     - python-dateutil==2.8.1
+    - pywavelets==1.1.1
     - pyzmq==19.0.2
+    - requests==2.24.0
+    - requests-oauthlib==1.3.0
+    - rsa==4.6
+    - scikit-image==0.17.2
+    - scipy==1.4.1
     - send2trash==1.5.0
     - six==1.15.0
-    - terminado==0.9.1
+    - tensorboard==2.3.0
+    - tensorboard-plugin-wit==1.7.0
+    - tensorflow==2.3.0
+    - tensorflow-estimator==2.3.0
+    - termcolor==1.1.0
+    - terminado==0.8.3
     - testpath==0.4.4
+    - tifffile==2020.8.25
     - tornado==6.0.4
+    - tqdm==4.48.2
     - traitlets==4.3.3
-    - voila==0.2.3
+    - urllib3==1.25.10
+    - voila==0.1.22
+    - wcwidth==0.2.5
     - webencodings==0.5.1
-    - zipp==3.3.0
-prefix: /opt/anaconda3/envs/myenv
+    - werkzeug==1.0.1
+    - wrapt==1.12.1
+    - zipp==3.1.0
+prefix: /Users/prayapati/opt/anaconda3/envs/myenv
