--- a/environment.yml
+++ b/environment.yml
@@ -51,6 +51,7 @@ dependencies:
     - oauthlib==3.1.0
     - opt-einsum==3.3.0
     - packaging==20.4
+    - pandas==1.1.3
     - pandocfilters==1.4.2
     - parso==0.7.1
     - pexpect==4.8.0
@@ -73,6 +74,8 @@ dependencies:
     - rsa==4.6
     - scikit-image==0.17.2
     - scipy==1.4.1
+    - seaborn==0.11.0
+    - scikit-learn==0.23.2
     - send2trash==1.5.0
     - six==1.15.0
     - tensorboard==2.3.0
